--- a/DIce Game---Challange/index.html
+++ b/DIce Game---Challange/index.html
@@ -17,17 +17,17 @@
       <div id="grid">
     <div class="space" >
        <img class="image1" src="images/dice6.png" alt="dice">
-          <h5>Player1</h5>  
+          <h5> Player1 </h5>  
     </div>
     <div class="space">
          <img class="image2" src="images/dice6.png" alt="dice">
-            <h5>Player2</h5>
+            <h5> Player2 </h5>
       
     </div>
     </div>
    
     <footer>
-      THis is a dice game by :- Divyanka jaiswal
+      This is a dice game by :- Divyanka jaiswal
     </footer>   
 <script src="index.js"></script>
 </body>
